added dir practic-1

--- a/practice-1/playbook.yml
+++ b/practice-1/playbook.yml
@@ -14,6 +14,8 @@
       name: petya
       state: absent
       remove: yes
+    tags: 
+      - check_user
 
   # Установить nginx (модуль apt).      
   - name: Install the latest version of nginx
