--- a/practice-2/create_dirs/tasks/main.yml
+++ b/practice-2/create_dirs/tasks/main.yml
@@ -11,5 +11,6 @@
     with_items: 
       - "/var/www"
       - "/var/www_backup"
-    # tags: 
-    #   - create_dirs
+    
+    tags: 
+      - create_dirs
